force-app/main/default/objects/Territory2/fields/Account_Owner_Priority__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Priority__c</fullName>
    <description>Field to store priority of account owner</description>
    <label>Account Owner Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GAM,SAM,TAM,PAM</fullName>
            </value>
            <value>
                <fullName>PAM,GAM,SAM,TAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>