force-app/main/default/objects/Territory2/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <description>Field to store Territory code</description>
    <label>Territory Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>