force-app/main/default/objects/Territory2/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <description>Field to store Territory region</description>
    <label>Territory Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>